--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.7.10
   flushbar: ^1.5.0
+  carousel_slider: ^4.0.0
+  cupertino_icons: ^1.0.4
+  webview_flutter: ^2.0.8
   flutter:
     sdk: flutter
 
