--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,17 @@
 name: indian_companies
 description: App for list of Major Indian Companies
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.0
+version: 2.1.1
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-  font_awesome_flutter: ^8.8.1
-  url_launcher: ^5.7.10
-  carousel_slider: ^4.0.0
-  cupertino_icons: ^1.0.4
+  font_awesome_flutter: ^10.1.0
+  url_launcher: ^6.1.2
   webview_flutter: ^2.0.8
+  http: ^0.13.4
   flutter:
     sdk: flutter
 
